# transnext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  experiment.md  gen.md  mycli.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: ci.yaml  codeql.yaml
scripts/: clean_db_leave_models.py  show_errors.py  template.py
src/mycli/: __init__.py  __main__.py  mycli.py
src/mycli/cli/: randomcommand.py
src/mycli/core/: __init__.py  example.py
src/mycli/utils/: __init__.py  template.py
src/transnext/: __init__.py  __main__.py  experiment.py  gen.py
src/transnext/cli/: cliexperiment.py  make.py  randomcommand.py  reproduce.py  sync.py
src/transnext/core/: base.py  db.py  example.py  newton.py  sdnapi.py
tests/: __init__.py  gen_test.py  mycli_test.py  semi_integration_test.py
tests/cli/: __init__.py  cliexperiment_test.py  make_test.py  randomcommand_test.py  reproduce_test.py  sync_test.py
tests/core/: __init__.py  base_test.py  db_test.py  newton_test.py  sdnapi_test.py
tests/data/json/: call_record_1.json
tests/utils/: __init__.py
tests_integration/: __init__.py  test_installed_cli.py
